# ordo

./: .gitignore  Makefile  README.md  project.Makefile  pyproject.toml
.github/workflows/: build.yml  release.yml
config/: properties.txt  property-map.sssom.tsv
docs/: pipeline_incidents.md  plan.md  release_notes.md  report.md  report_refactor
env/: .env.example
linkml/: mondo_source_schema.yaml
reports/: metrics.json  transformed-top-level-counts.tsv
scripts/: acquire.py  resolve_version.py  transform.py  verify.py
sparql/: count_classes_by_top_level.sparql  exact_syn_from_label.ru  fix-complex-reification-ordo.ru  fix_xref_prefixes.ru  ordo-flatten-replacements.ru
src/ordo/: datamodel.py
